# axcli

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
docs/research/: background-click-journey.md  background-click.md
examples/: probe_bg_click.rs  probe_codex.rs  probe_lark.rs
src/: accessibility.rs  app_kind.rs  input.rs  lib.rs  locator.rs  main.rs  overlay.rs  screen_capture.rs  screenshot.rs  tree_fmt.rs
